Fixed visibility issue of dropdown menu

--- a/style.css
+++ b/style.css
@@ -51,14 +51,15 @@
 }
 #nav{
     background: linear-gradient(#000000 30%,transparent 100%);
+    font-size: 20px;
 }
-#nav-nav{
-    text-shadow: 0px 0px 10px orange;
+/* #nav-nav{
+    text-shadow: 0px 0px 10px white;
     -webkit-text-stroke-color: black;
     -webkit-text-fill-color: white;
     -webkit-text-stroke-width: calc(1px /1);
-    font-size: 25px;
-}
+    font-size: 20px;
+} */
 .navbar-nav{
     display: flex;
     width: 50vw;
@@ -66,6 +67,16 @@
     justify-content: space-evenly;
     right: 0vw;
     flex-wrap: nowrap;
+}
+@media(max-width:575px){
+    .navbar-nav{
+        background-color: rgba(56, 58, 58, 0.808);
+        border-radius: 10px;
+        width: 160px;
+    }
+    #nav-nav{
+        padding-left: 25px;
+    }
 }
 .navbar-brand{
     position: relative;
